# UDP-new-again

./: README.md  multithreading.cpp
UDP/client/app/inc/: PacketHandler.h  ThreadManager.h  client_side.h
UDP/client/app/src/: client.c
UDP/client/utils/src/: client.cc
UDP/server/: makefile
UDP/server/app/inc/: client_connection.h  serverException.h
UDP/server/app/src/: client_connection.cc  server.cc
UDP/server/utils/inc/: client_connection.h  server.h
UDP/server/utils/src/: app_callback.cc  client_connection.c  server.cc
UDP/test/: test_udp.sh
client/app/inc/: app.h  app_terminal.h  can_listener.h  clinet.h
client/app/src/: app_terminal.cpp  client.c
client/utils/inc/: client.h
server/app/inc/: server.h
server/app/src/: server.cc  serverException.cpp
server/utils/inc/: client_connection.h
server/utils/src/: server.cc
test/: tcpacceptor.c  tcpconnector.c  tcpstream.c
test1/: CMakeLists.txt  client_app  makefile  test.py  test.sh
test1/client/: client_main.cc  main.cc
test1/client/include/: client.h
test1/client/src/: client.cc
test1/server/: main.cc  server_main.cc
test1/server/include/: client_connection.h  server.h  threadpool.h  udpClientConnection.h
test1/server/src/: client_connection.cc  server.cc  threadpool.cc  udpClientCOnnection.cc
test1/server/utils/inc/: ntp_server.h
test1/server/utils/src/: ntp_server.cc
test1/udphandle/inc/: udphandle.h
test1/udphandle/src/: udphandle.cc
